--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -24,14 +24,14 @@
                 app:mt_hint="Custom hint"
                 app:theme="@style/AppTheme"
                 android:elevation="0dp"
-                android:padding="7dp"
-                android:layout_marginTop="3dp"
+                android:padding="5dp"
+                app:mt_backIconDrawable="@drawable/ic_baseline_search_24px"
+                android:layout_marginTop="0dp"
                 android:layout_marginEnd="2dp"
-                android:layout_marginBottom="3dp"
+                android:layout_marginBottom="0dp"
                 app:mt_maxSuggestionsCount="5"
-                app:mt_searchBarColor="#F5F5F5"
                 android:layout_width="match_parent"
-                android:layout_height="34dp"
+                android:layout_height="38dp"
                 android:id="@+id/searchBar"
                 android:background="@drawable/round_corners"
 
