--- a/app/src/main/res/layout/fragment_blank_fragment2.xml
+++ b/app/src/main/res/layout/fragment_blank_fragment2.xml
@@ -4,10 +4,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/container_video_feed"
-                android:background="@color/medium_gray"
+                android:background="@color/white"
                 android:orientation="vertical"
 
-                tools:context=".ExploreActivity"
+                tools:context=".Fragments.ExploreActivity"
 
 
 >
@@ -75,7 +75,7 @@
             android:id="@+id/home_page_video_feed"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/light_gray"
+            android:background="@color/white"
     />
 
 
