--- a/app/src/main/res/layout/full_view.xml
+++ b/app/src/main/res/layout/full_view.xml
@@ -11,10 +11,9 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:background="@color/light_gray"
+        android:background="@color/white"
 
-        android:layout_marginTop="0dp"
-        android:layout_marginBottom="0dp"
+
 
 
               android:layout_height="wrap_content"
@@ -45,9 +44,11 @@
     <android.support.v7.widget.CardView
             android:layout_width="match_parent"
 
-            app:cardCornerRadius="0dp"
+            app:cardCornerRadius="10dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            app:cardElevation="0dp"
+            app:cardElevation="2dp"
             android:layout_gravity="bottom"
             android:layout_height="wrap_content">
 
