--- a/app/src/main/res/layout/profile_top.xml
+++ b/app/src/main/res/layout/profile_top.xml
@@ -4,6 +4,7 @@
               xmlns:card_view="http://schemas.android.com/tools"
               android:id="@+id/containerMain"
               android:orientation="vertical"
+              android:layout_margin="8dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
 
@@ -15,9 +16,7 @@
               android:textSize="25sp"
               android:textColor="@color/black"
               android:textStyle="bold"
-              android:layout_marginEnd="40px"
-            android:layout_marginStart="40px"
-              android:layout_marginBottom="40px"
+
 
               android:fontFamily="@font/source_sans_pro"/>
 
@@ -27,7 +26,6 @@
             android:id="@+id/container_top"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
             android:orientation="horizontal"
                 >
 
@@ -37,8 +35,8 @@
                 android:id="@+id/top1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:cardCornerRadius="5dp"
-                app:cardBackgroundColor="@color/light_gray"
+                app:cardCornerRadius="10dp"
+                app:cardBackgroundColor="@color/white"
         >
 
             <LinearLayout android:layout_width="match_parent"
@@ -55,40 +53,6 @@
 
                 />
 
-                <!--<TextView-->
-                        <!--android:id="@+id/top1ImageTitleGrid1"-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:text="Explore this "-->
-                        <!--android:textSize="17sp"-->
-                        <!--android:textColor="@color/black"-->
-                        <!--android:textStyle="bold"-->
-                        <!--android:gravity="bottom"-->
-
-                        <!--android:fontFamily="@font/noto_sans_bold"/>-->
-
-                <!--<TextView-->
-                        <!--android:id="@+id/top1ImageAbstractGrid2"-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:text="Explore this mught be the end so you should not ursh"-->
-                        <!--android:textSize="14sp"-->
-                        <!--android:textColor="@color/dark_gray"-->
-                        <!--android:gravity="bottom"-->
-
-                        <!--android:fontFamily="@font/noto_sans"/>-->
-
-                <!--<TextView-->
-                        <!--android:id="@+id/top1ImageCreatorGrid3"-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:text="By : Justin Cornelius"-->
-                        <!--android:textSize="10sp"-->
-                        <!--android:textColor="@color/dark_gray"-->
-                        <!--android:gravity="bottom"-->
-
-                        <!--android:fontFamily="@font/noto_sans"/>-->
-
 
             </LinearLayout>
 
@@ -98,9 +62,9 @@
                 android:id="@+id/top2"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                app:cardCornerRadius="5dp"
+                app:cardCornerRadius="10dp"
                 card_view:elevation="0dp"
-                app:cardBackgroundColor="@color/light_gray"
+                app:cardBackgroundColor="@color/white"
         >
 
 
@@ -118,39 +82,6 @@
 
                 />
 
-                <!--<TextView-->
-                        <!--android:id="@+id/top2ImageTitleGrid1"-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:text="Explore this "-->
-                        <!--android:textSize="17sp"-->
-                        <!--android:textColor="@color/black"-->
-                        <!--android:textStyle="bold"-->
-                        <!--android:gravity="bottom"-->
-
-                        <!--android:fontFamily="@font/noto_sans_bold"/>-->
-
-                <!--<TextView-->
-                        <!--android:id="@+id/top2ImageAbstractGrid2"-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:text="Explore this mught be the end so you should not ursh"-->
-                        <!--android:textSize="14sp"-->
-                        <!--android:textColor="@color/dark_gray"-->
-                        <!--android:gravity="bottom"-->
-
-                        <!--android:fontFamily="@font/noto_sans"/>-->
-
-                <!--<TextView-->
-                        <!--android:id="@+id/top2ImageCreatorGrid3"-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:text="By : Justin Cornelius"-->
-                        <!--android:textSize="10sp"-->
-                        <!--android:textColor="@color/dark_gray"-->
-                        <!--android:gravity="bottom"-->
-
-                        <!--android:fontFamily="@font/noto_sans"/>-->
 
 
             </LinearLayout>
@@ -173,7 +104,8 @@
                 android:id="@+id/bottom1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:cardBackgroundColor="@color/light_gray"
+                app:cardCornerRadius="10dp"
+                app:cardBackgroundColor="@color/white"
                 card_view:elevation="0dp"
 
 
@@ -192,41 +124,6 @@
 
             />
 
-                <!--<TextView-->
-                            <!--android:id="@+id/bottom1ImageTitleGrid1"-->
-                            <!--android:layout_width="match_parent"-->
-                          <!--android:layout_height="wrap_content"-->
-                          <!--android:text="Explore this "-->
-                          <!--android:textSize="17sp"-->
-                          <!--android:textColor="@color/black"-->
-                          <!--android:textStyle="bold"-->
-                          <!--android:gravity="bottom"-->
-
-                          <!--android:fontFamily="@font/noto_sans_bold"/>-->
-
-                <!--<TextView-->
-                        <!--android:id="@+id/bottom1ImageAbstractGrid2"-->
-                        <!--android:layout_width="match_parent"-->
-                          <!--android:layout_height="wrap_content"-->
-                          <!--android:text="Explore this mught be the end so you should not ursh"-->
-                          <!--android:textSize="14sp"-->
-                          <!--android:textColor="@color/dark_gray"-->
-                          <!--android:gravity="bottom"-->
-
-                          <!--android:fontFamily="@font/noto_sans"/>-->
-
-                <!--<TextView-->
-                        <!--android:id="@+id/bottom1ImageCreatorGrid3"-->
-                        <!--android:layout_width="match_parent"-->
-                          <!--android:layout_height="wrap_content"-->
-                          <!--android:text="By : Justin Cornelius"-->
-                          <!--android:textSize="10sp"-->
-                          <!--android:textColor="@color/dark_gray"-->
-                          <!--android:gravity="bottom"-->
-
-                          <!--android:fontFamily="@font/noto_sans"/>-->
-
-
             </LinearLayout>
 
         </android.support.v7.widget.CardView>
@@ -236,10 +133,9 @@
                 android:id="@+id/bottom2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                app:cardCornerRadius="5dp"
+                app:cardCornerRadius="10dp"
                 card_view:elevation="0dp"
-                app:cardBackgroundColor="@color/light_gray"
+                app:cardBackgroundColor="@color/white"
 
 
 
@@ -259,41 +155,6 @@
 
                 />
 
-                <!--<TextView-->
-                        <!--android:id="@+id/bottom2ImageTitleGrid1"-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:text="Explore this "-->
-                        <!--android:textSize="17sp"-->
-                        <!--android:textColor="@color/black"-->
-                        <!--android:textStyle="bold"-->
-                        <!--android:gravity="bottom"-->
-
-                        <!--android:fontFamily="@font/noto_sans_bold"/>-->
-
-                <!--<TextView-->
-                        <!--android:id="@+id/bottom2ImageAbstractGrid2"-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:text="Explore this mught be the end so you should not ursh"-->
-                        <!--android:textSize="14sp"-->
-                        <!--android:textColor="@color/dark_gray"-->
-                        <!--android:gravity="bottom"-->
-
-                        <!--android:fontFamily="@font/noto_sans"/>-->
-
-                <!--<TextView-->
-                        <!--android:id="@+id/bottom2ImageCreatorGrid3"-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:text="By : Justin Cornelius"-->
-                        <!--android:textSize="10sp"-->
-                        <!--android:textColor="@color/dark_gray"-->
-                        <!--android:gravity="bottom"-->
-
-                        <!--android:fontFamily="@font/noto_sans"/>-->
-
-
             </LinearLayout>
 
 
@@ -308,8 +169,7 @@
             android:layout_width="170dp"
             android:layout_height="40dp"
             android:layout_gravity="center"
-            android:layout_marginTop="40px"
-            android:layout_marginBottom="20px"
+
             android:text="view all"
             android:background="@drawable/button_effect"
             android:elevation="0dp"
