--- a/app/src/main/res/layout/view_holder_exoplayer_basic.xml
+++ b/app/src/main/res/layout/view_holder_exoplayer_basic.xml
@@ -8,8 +8,7 @@
         android:id="@+id/card_linear"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="0dp"
-        android:layout_marginTop="0dp"
+        android:layout_margin="5dp"
 
 
         android:background="@color/white"
@@ -47,7 +46,7 @@
                                         app:cardCornerRadius="0dp"
                                         android:layout_marginBottom="10dp"
                                         android:layout_marginTop="10dp"
-                                        app:cardBackgroundColor="@color/cardview_light_background">
+                                        app:cardBackgroundColor="@color/white">
 
 <LinearLayout android:layout_width="match_parent"
               android:layout_height="wrap_content"
