Full version before Stripdown
Full version before Stripdown

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -84,7 +84,7 @@
             app:itemIconTint="@drawable/selector_bottom_nav"
             app:itemTextColor="@drawable/selector_bottom_nav"
             app:elevation="0dp"
-            android:background="@color/dark_gray"
+            android:background="@color/basically_black"
             app:menu="@menu/navigation" />
 
 
