--- a/app/src/main/res/layout/profile_header.xml
+++ b/app/src/main/res/layout/profile_header.xml
@@ -14,10 +14,13 @@
 
 >
 
-    <ImageView android:layout_width="150dp"
-               android:layout_height="150dp"
+    <de.hdodenhof.circleimageview.CircleImageView
+
+            android:layout_width="110dp"
+               android:layout_height="110dp"
                android:id="@+id/user_image"
-               android:background="@drawable/pastry1"
+            android:scaleType="centerCrop"
+               android:src="@drawable/pastry1"
 
 
     />
@@ -75,6 +78,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginTop="50dp"
+                android:visibility="invisible"
                 android:background="@color/light_gray"
 
 
