--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -5,7 +5,7 @@
   android:id="@+id/toolbar"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
-  android:background="@color/dark_gray"
+  android:background="@color/basically_black"
                                    android:elevation="1dp"
   android:minHeight="?android:attr/actionBarSize"
 
