--- a/app/src/main/res/drawable/rounded_button_post_list_option.xml
+++ b/app/src/main/res/drawable/rounded_button_post_list_option.xml
@@ -3,8 +3,8 @@
 
     <item><shape>
 
-<stroke android:color="@color/gray"
-        android:width="1dp"
+<stroke android:color="@color/dark_gray"
+        android:width="3dp"
 >
 
 </stroke>
