--- a/app/src/main/res/drawable/rounded_follow.xml
+++ b/app/src/main/res/drawable/rounded_follow.xml
@@ -4,7 +4,7 @@
 
     <corners android:radius="50dp"/>
 
-    <stroke android:color="@color/dark_gray"
+    <stroke android:color="@color/white"
             android:width="1dp"
     >
 
