--- a/app/src/main/res/layout/button_profile.xml
+++ b/app/src/main/res/layout/button_profile.xml
@@ -14,7 +14,7 @@
     <Button android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:background="@drawable/back_white"
-            android:text="photos"
+            android:text="yours"
             android:elevation="0dp"
 
             android:stateListAnimator="@null"
@@ -28,7 +28,7 @@
 
             android:background="@color/white"
             android:id="@+id/button_profile_2"
-            android:text="photos"
+            android:text="their's"
             android:stateListAnimator="@null"
             android:layout_marginEnd="30dp"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" android:textColor="@color/white"
