--- a/app/src/main/res/layout/adapter_row_similar.xml
+++ b/app/src/main/res/layout/adapter_row_similar.xml
@@ -1,37 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
-
-
-
-
-
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="wrap_content"
-        android:layout_margin="3dp"
-              android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-
         android:orientation="vertical"
 >
 
-
-
-
     <androidx.cardview.widget.CardView
             android:id="@+id/constrain2"
-
-
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="0dp"
             app:cardCornerRadius="5dp"
-
-
-
             app:cardElevation="0dp" tools:ignore="ExtraText"
             android:padding="0dp">
 
@@ -47,17 +32,6 @@
     >
 
 
-
-
-        <!--<TextView-->
-            <!--android:id="@+id/title"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginTop="8dp"-->
-            <!--android:textStyle="bold"-->
-            <!--app:layout_constraintStart_toStartOf="parent"-->
-            <!--app:layout_constraintTop_toTopOf="parent" />-->
-
         <ImageButton
                 android:id="@+id/placeImage"
                 android:scaleType="fitXY"
@@ -65,28 +39,22 @@
                 android:background="@color/white"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
-
-
         />
-
-
-
-
-
 
     </RelativeLayout>
 
     </androidx.cardview.widget.CardView>
 
-    <TextView android:layout_width="match_parent"
+    <TextView
+              android:id="@+id/lower_description"
+              android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textSize="12sp"
-              android:layout_marginLeft="5dp"
-              android:layout_below="@+id/placeImage"
+              android:layout_marginStart="5dp"
               android:layout_gravity="bottom"
-
-              android:fontFamily="@font/noto_sans_bold" android:textStyle="bold" android:id="@+id/lower_description"/>
+              android:fontFamily="@font/noto_sans_bold"
+              android:textStyle="bold"
+            />
 
 </LinearLayout>
 
