--- a/app/src/main/res/layout/view_holder_exoplayer_basic.xml
+++ b/app/src/main/res/layout/view_holder_exoplayer_basic.xml
@@ -8,10 +8,7 @@
         android:id="@+id/card_linear"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
-        android:layout_marginBottom="2dp"
-
-
+        android:layout_margin="5dp"
         android:background="@color/basically_black"
         android:orientation="vertical"
         app:cardBackgroundColor="@color/cardview_light_background"
@@ -20,39 +17,24 @@
 >
 
 
-    <com.airbnb.lottie.LottieAnimationView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            app:lottie_fileName="loading_video.json"
-            android:scaleType="fitCenter"
-
-
-            app:lottie_autoPlay="true"
-            android:id="@+id/load_video"
-            android:visibility="gone"
-
-
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
-
 
     <androidx.cardview.widget.CardView
             android:id="@+id/card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardMaxElevation="10dp"
-            app:cardBackgroundColor="@color/basically_black" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            app:cardCornerRadius="5dp"
+            app:cardBackgroundColor="@color/basically_black"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent">
 
         <LinearLayout
                 android:id="@+id/exo_margin"
                 android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:orientation="vertical"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
                 android:background="@color/basically_black"
-
-
         >
 
             <include layout="@layout/cell_header_profile"
@@ -60,7 +42,6 @@
                      android:layout_height="wrap_content"
                      android:id="@+id/cell_header"
                      android:visibility="visible"
-
             />
 
 
@@ -68,7 +49,6 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@color/basically_black"
-
             >
 
 
@@ -82,11 +62,9 @@
                         android:layout_height="300dp"
                         app:use_controller="true"
                         app:resize_mode="fill"
-                        android:layout_margin="10dp"
                         android:background="@color/basically_black"
                         app:surface_type="texture_view"
                 />
-
 
 
                 <ImageView
@@ -101,30 +79,11 @@
 
             </RelativeLayout>
 
-            <include layout="@layout/video_button_layout"
-                     android:id="@+id/botton_buttons"
-                     android:layout_width="match_parent"
-                     android:layout_height="wrap_content"
-                     android:visibility="visible"
-                     android:layout_margin="8dp"/>
 
 
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
-
-    <include layout="@layout/cell_header_profile"
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-             android:id="@+id/cell_header_bottom"
-             android:visibility="gone"
-             android:layout_marginStart="10dp"
-             android:layout_marginBottom="20dp"
-    />
-
-
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
