--- a/app/src/main/res/layout/view_player.xml
+++ b/app/src/main/res/layout/view_player.xml
@@ -2,12 +2,11 @@
 
 
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/root"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-            android:gravity="center"
               android:orientation="vertical"
 
 
@@ -20,43 +19,61 @@
 <!--</LinearLayout>-->
 
 
+    <ImageView
+            android:id="@+id/cancel_video"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+
+    <TextView
+            android:id="@+id/expand_text"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:text="Tap For Full"
+            android:textSize="30sp"
+            android:textStyle="bold"/>
 
 
 
 
 
-
-
-
-
-<include layout="@layout/cell_header_profile"/>
-
-
-
-
-
-
+<LinearLayout
+                android:id="@+id/player_margin"
+        android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:gravity="center"
+              android:orientation="vertical"
+>
 
 
 
     <com.google.android.exoplayer2.ui.PlayerView
-        android:id="@+id/previewer_player"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:minHeight="200dp"
-        android:transitionName="tImage1"
-        android:scaleType="fitXY"/>
-
-
-    <include layout="@layout/post_bottom_button"/>
-
-
-
-
-
-
-
-
-
-
+            android:id="@+id/previewer_player"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="200dp"
+            android:transitionName="tImage1"
+            app:surface_type="texture_view"
+            app:resize_mode="fill"
+            android:scaleType="fitXY"/>
 </LinearLayout>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</RelativeLayout>
