--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">AIzaSyBT8dRLzitFib3F9FOxVAI9efQOdvZvWaM</string>
+    <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve"></string>
 </resources>
