Code Cleanup and Bug Fixes
Fixed a bug that detached the adapter from the layout manager when "onBackPressed"

--- a/app/src/main/res/layout/fragment_blank_fragment2.xml
+++ b/app/src/main/res/layout/fragment_blank_fragment2.xml
@@ -7,7 +7,7 @@
                 android:background="@color/theme"
                 android:orientation="vertical"
 
-                tools:context=".UI.fragment.ExploreActivity"
+                tools:context=".UI.fragment.MainFeed"
 
 
 >
